Setup initial file structure

--- a/templates/bodymovin.hbs
+++ b/templates/bodymovin.hbs
@@ -1,3 +1,4 @@
 <div class="text-inner component-inner" role="region" aria-label="{{_globals._components._text.ariaRegion}}">
     {{> component this}}
+    <div id="bodymovin"></div>
 </div>
